@@ -32,6 +32,7 @@
 - Ethna_MailSender にて、メール送信に問題がある場合の設定として 'mail_func_workaround' を追加
 -- この値を true に設定すると、メールヘッダの改行コードを一律 CRLF にする処理を回避する
 -- $mail = new Ethna_MailSender(); $mail->setOption(array('mail_func_workaround')); でも設定可能
+- Smarty の設定（現在はデリミタのみ）を [appid]-ini.php に書くことが出来るようにした
 
 *** bug fix
 
@@ -58,6 +59,7 @@
 - Ethna_Plugin_Logwriter の debug_backtrace の一部が取得できず、E_NOTICE が出るバグを修正 (thanks: http://www.remix.gr.jp/)
 - cli 環境で Ethna_Session::start を叩いたときに $_SERVER 変数がないために E_NOTICE が出る問題を修正
 - PHP 5.3.0 で新設された E_DEPRECATED を ON にすると Fatal Error が起きるバグを修正 (#18418)
+- Smartyのデリミタを変更している場合にi18nコマンドが機能しないバグを修正 (#18668)
 
 ** 2.5.0-preview4
 
